# cleo-rover

./: .gitignore  README.md  agent.md  handover.md  pyproject.toml
.github/workflows/: tests.yml
cad/: README.md  cleo_shell_v1.scad
config/: rover.default.json  rover.hardware.floor.cautious.json  rover.hardware.presence.json
deploy/systemd/: cleo-rover-body.service  cleo-rover-brain.service  cleo-rover-senses.service
docs/: HANDOVER_2026-06-25_PIP_AUTONOMY_AUDIT.md  HANDOVER_2026-06-25_PIP_ENABLE_ON_HARDWARE.md  HANDOVER_2026-06-25_PIP_FNK0043_AUDIT_AND_BRINGUP.md  HANDOVER_2026-06-25_PIP_HALLWAY.md  HANDOVER_2026-06-25_PIP_TIER3_NAV_MAPPING.md  HANDOVER_2026-06-26_LIVING_AUTONOMY_OVERHAUL.md  HANDOVER_2026-06-26_PIP_HARDWARE_BRINGUP.md  HANDOVER_2026-06-26_ROOM_TO_ROOM_AND_MEMORY.md  POWERUP_RUNBOOK.md  VOICE_SETUP.md  pre-hardware-improvements.md  session-handoff-2026-06-22-pip-first-adventure.md
rover/: arbiter.py  autonomy.py  awareness.py  battery.py  brain.py  calibrate.py  calibration.py  choreo.py  client.py  companion.py  config.py  consolidation.py  cruise.py  degrade.py  diary.py  display.py  drivers.py  explore.py  freenove.py  hermes_bridge.py  hub.py  line_follow.py  longterm.py  mapping.py  mind.py  models.py  navigation.py  notify.py  occupancy.py  odometry.py  perception.py  peripherals.py  persistence.py  pip_brain.py  pip_life.py  pip_soul.py  presence.py  renderer.py  rgb_affect.py  safety_sim.py  (+15 more)
scripts/: dance.py  enable_living_mode.sh  enable_spi1_display.sh  first_power_preflight.sh  install_pip_life_systemd.sh  install_presence_systemd.sh  install_profile_switch_sudoers.sh  install_systemd.sh  install_telegram_agent_systemd.sh  install_voice_daemon_systemd.sh  pi_setup.sh  presence_tick.py  render_expressions.py  set_rover_profile.sh  smoke_test.py
tests/: test_api.py  test_arbiter.py  test_autonomy.py  test_awareness.py  test_battery.py  test_calibration.py  test_choreo.py  test_client_cli.py  test_companion.py  test_consolidation.py  test_cruise.py  test_day_in_the_life.py  test_degrade.py  test_diary.py  test_display.py  test_emotions.py  test_explore.py  test_freenove.py  test_goals.py  test_hallway_scout.py  test_hardware_fixes.py  test_hardware_paths.py  test_integration.py  test_line_follow.py  test_living_autonomy.py  test_mapping.py  test_mind.py  test_nav_endpoints.py  test_navigation.py  test_occupancy.py  test_odometry.py  test_optical_flow.py  test_perception.py  test_pip_soul.py  test_prehardware_upgrades.py  test_product_finish.py  test_reflex_safety.py  test_rgb_affect.py  test_room_to_room.py  test_sensors_filter.py  (+13 more)
tools/: generate_pip_shell_final_stls.py  generate_pip_shell_v10_roof_stls.py  generate_pip_shell_v11_simple_u_stls.py  generate_pip_shell_v12_printable_u_stls.py  generate_pip_shell_v13_one_piece_roof_stls.py  generate_pip_shell_v14_integrated_roof_stls.py  generate_pip_shell_v3_canopy_stls.py  generate_pip_shell_v4_supportless_canopy_stls.py  generate_pip_shell_v5_roofdown_stls.py  generate_pip_shell_v6_final_stls.py  generate_pip_shell_v6_open_top_stls.py  generate_pip_shell_v7_roof_stls.py  generate_pip_shell_v8_cyber_roof_stls.py  generate_pip_shell_v9_dorsal_roof_stls.py  generate_shell_stls.py
(+71 files in other folders)
