[project]
name = "cleo-rover"
version = "0.1.0"
description = "Cleo Rover Mk1 body-control service for Raspberry Pi Zero 2 W"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pillow>=10.0",
]

[project.scripts]
cleo-rover = "rover.client:main"
cleo-rover-brain = "rover.brain:main"
cleo-rover-calibrate = "rover.calibrate:main"
cleo-rover-senses = "rover.senses:main"

[project.optional-dependencies]
pi = [
    "gpiozero>=2.0",
    "spidev>=3.6",
    "smbus2>=0.5",
    "pillow>=10.0",
    "numpy>=1.24",
]

dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools]
packages = ["rover"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
