[project]
name = "cleo-rover"
version = "0.1.0"
description = "Cleo Rover Mk1 body-control service for Raspberry Pi 4B"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pillow>=10.0",
]

[project.scripts]
cleo-rover = "rover.client:main"
cleo-rover-brain = "rover.brain:main"
cleo-rover-calibrate = "rover.calibrate:main"
cleo-rover-senses = "rover.senses:main"
cleo-rover-voice = "rover.voice_daemon:main"
cleo-rover-presence = "rover.presence:main"
cleo-rover-vision-bridge = "rover.vision_bridge:main"
cleo-rover-telegram-agent = "rover.telegram_agent:main"
cleo-rover-pip-life = "rover.pip_life:main"

[project.optional-dependencies]
pi = [
    "gpiozero>=2.0",
    "spidev>=3.6",
    "smbus2>=0.5",
    "pillow>=10.0",
    "numpy>=1.24",
]

dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

# Optional on-Pi camera perception. ARM/Pi-only wheels are guarded by markers so
# `pip install .[vision]` is a no-op (except numpy) on dev hosts.
vision = [
    "numpy>=1.24",
    "tflite-runtime>=2.14; platform_machine=='aarch64'",
    "picamera2>=0.3; platform_machine=='aarch64'",
    # Sparse optical flow (stall/looming confirmation). Headless build = no GUI deps.
    "opencv-python-headless>=4.8; platform_machine=='aarch64'",
]

# Optional offline voice: wake word -> VAD -> STT. See rover/voice_daemon.py and
# docs/VOICE_SETUP.md. faster-whisper/silero-vad are CPU/pure-python (cross-platform);
# openwakeword is gated to the Pi so a dev `pip install .[voice]` stays light.
voice = [
    "numpy>=1.24",
    "sounddevice>=0.4",
    "openwakeword>=0.6; platform_machine=='aarch64'",
    "faster-whisper>=1.0",
    "silero-vad>=5.1",
]

[tool.setuptools]
packages = ["rover"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
